--- a/services.html
+++ b/services.html
@@ -142,6 +142,27 @@
             <img src="./assets/img/certificate/certificate_15.jpg" class="img-fluid" alt="..." />
           </div>
 
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+            <img src="./assets/img/certificate/certificate_16.jpg" class="img-fluid" alt="..." />
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+            <img src="./assets/img/certificate/certificate_17.jpg" class="img-fluid" alt="..." />
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+            <img src="./assets/img/certificate/certificate_18.jpg" class="img-fluid" alt="..." />
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+            <img src="./assets/img/certificate/certificate_19.jpg" class="img-fluid" alt="..." />
+          </div>
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+            <img src="./assets/img/certificate/certificate_20.png" class="img-fluid" alt="..." />
+          </div>
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+            <img src="./assets/img/certificate/certificate_21.jpeg" class="img-fluid" alt="..." />
+          </div>
         </div>
 
       </div>
