--- a/portfolio-details1.html
+++ b/portfolio-details1.html
@@ -51,7 +51,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-1.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-2.jpeg" alt="">
                 </div>
 
               </div>
@@ -63,18 +63,18 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Application Mobile</li>
-                <li><strong>Client</strong>: Bangkit Academy</li>
-                <li><strong>Project date</strong>: 16 Juni 2023</li>
-                <li><strong>Landing Page</strong>: <a href="https://barkit-landing-page-iba3thqjqq-et.a.run.app/">BarKit</a></li>
-                <li><strong>Project URL</strong>: <a href="https://github.com/BangkitCapstone2023" target="_blank">Bangkit Capstone</a></li>
+                <li><strong>Category</strong>: Application Game Mobile</li>
+                <li><strong>Final Project</strong>: Indonesian Women in Tech: Programming with Python - Cisco Networking Academy</li>
+                <li><strong>Project date</strong>: 19 August 2021</li>
+                <li><strong>Youtube</strong>: <a href="https://www.youtube.com/watch?v=4-JyQFw_G2w" target="_blank">Demo Application</a></li>
+                <li><strong>Project URL</strong>: <a href="https://github.com/Andiilla/-Build-Munne" target="_blank">Build Munne</a></li>
 
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>About The Project</h2>
               <p>
-                Our team was inspired by the issue of limited stock or options available to most people who only require them for a short period or specific events. As a solution, we developed an e-commerce-based rental application called "BarKit (Barang Kita)" that shares similarities with traditional e-commerce platforms but includes options for returning items according to agreed-upon timeframes. Our application utilizes Machine Learning to validate uploaded item listings with inputted categories, thereby avoiding clickbait often encountered on other e-commerce platforms.
+                A platform game (or platformer) is a video game in which a character jumps between platforms, obstacles, or both to progress through the game.
               </p>
             </div>
           </div>
