--- a/portfolio-details4.html
+++ b/portfolio-details4.html
@@ -65,7 +65,7 @@
               <ul>
                 <li><strong>Category</strong>: Application Mobile</li>
                 <li><strong>Client</strong>: Bangkit Academy</li>
-                <li><strong>Project date</strong>: 16 Juni 2023</li>
+                <li><strong>Project date</strong>: 16 Juni, 2023</li>
                 <li><strong>Landing Page</strong>: <a href="https://barkit-landing-page-iba3thqjqq-et.a.run.app/">BarKit</a></li>
                 <li><strong>Project URL</strong>: <a href="https://github.com/BangkitCapstone2023" target="_blank">Bangkit Capstone</a></li>
 
