--- a/portfolio-details2.html
+++ b/portfolio-details2.html
@@ -51,7 +51,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-1.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-3.jpg" alt="">
                 </div>
 
               </div>
@@ -63,18 +63,18 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Application Mobile</li>
-                <li><strong>Client</strong>: Bangkit Academy</li>
-                <li><strong>Project date</strong>: 16 Juni 2023</li>
-                <li><strong>Landing Page</strong>: <a href="https://barkit-landing-page-iba3thqjqq-et.a.run.app/">BarKit</a></li>
-                <li><strong>Project URL</strong>: <a href="https://github.com/BangkitCapstone2023" target="_blank">Bangkit Capstone</a></li>
+                <li><strong>Category</strong>: Applikasi Berbasis Website</li>
+                <li><strong>Project</strong>: Pemrograman Website</li>
+                <li><strong>Project date</strong>: 10 April, 2021</li>
+                <li><strong>Youtube</strong>: <a href="https://drive.google.com/file/d/1k7LMRPdraeic9ZYBrhK8ZQdDRwGF3KJ_/view?usp=sharing" target="_blank">Demo Web</a></li>
+                <li><strong>Project URL</strong>: <a href="https://github.com/Andiilla/aplikasi-berbasis-web-pembukuan-online" target="_blank">Pembukuan Online</a></li>
 
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>About The Project</h2>
               <p>
-                Our team was inspired by the issue of limited stock or options available to most people who only require them for a short period or specific events. As a solution, we developed an e-commerce-based rental application called "BarKit (Barang Kita)" that shares similarities with traditional e-commerce platforms but includes options for returning items according to agreed-upon timeframes. Our application utilizes Machine Learning to validate uploaded item listings with inputted categories, thereby avoiding clickbait often encountered on other e-commerce platforms.
+                The Online Bookkeeping Application is a collaborative project developed by you and your group mates. The project aims to provide a digital solution for individuals or small businesses to efficiently manage and track their finances. The application is designed as a web-based platform that allows users to record transactions, categorize expenses and incomes, and generate useful financial reports.
               </p>
             </div>
           </div>
