Update portfolio details

--- a/portfolio-details3.html
+++ b/portfolio-details3.html
@@ -74,7 +74,7 @@
             <div class="portfolio-description">
               <h2>About The Project</h2>
               <p>
-                Deploying models from data science projects that have been generated. This Final Project is an assignment for the Microcredential Certification Associate Data Scientist Training in 2021.
+                Deploying models from data science projects that have been generated. This Final Project is an assignment for the Microcredential Certification Associate Data Scientist Training in 2021. Find out the factors that influence poverty in West Java and determine things that can reduce the rate of poverty.
               </p>
             </div>
           </div>
