--- a/portfolio-details4.html
+++ b/portfolio-details4.html
@@ -51,7 +51,13 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-1.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-8.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/portfolio-8deep.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/portfolio-8-deep1.jpg" alt="">
                 </div>
 
               </div>
@@ -63,18 +69,15 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Application Mobile</li>
-                <li><strong>Client</strong>: Bangkit Academy</li>
-                <li><strong>Project date</strong>: 16 Juni, 2023</li>
-                <li><strong>Landing Page</strong>: <a href="https://barkit-landing-page-iba3thqjqq-et.a.run.app/">BarKit</a></li>
-                <li><strong>Project URL</strong>: <a href="https://github.com/BangkitCapstone2023" target="_blank">Bangkit Capstone</a></li>
-
+                <li><strong>Category</strong>: Climate Analysis Data Book</li>
+                <li><strong>Client</strong>: BBMKG Wilayah IV Makassar</li>
+                <li><strong>Project date</strong>: 12 August 2022</li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>About The Project</h2>
               <p>
-                Our team was inspired by the issue of limited stock or options available to most people who only require them for a short period or specific events. As a solution, we developed an e-commerce-based rental application called "BarKit (Barang Kita)" that shares similarities with traditional e-commerce platforms but includes options for returning items according to agreed-upon timeframes. Our application utilizes Machine Learning to validate uploaded item listings with inputted categories, thereby avoiding clickbait often encountered on other e-commerce platforms.
+                The project "Climate Data Analysis of Sulawesi-Maluku Provinces" aims to analyze climate patterns in various provinces within the Sulawesi-Maluku region. By creating data groups based on provinces using different rainfall station data, the project seeks to comprehend rainfall pattern changes over a specific time frame in the designated area. The steps involve data collection, categorization, statistical analysis, data visualization, drawing conclusions, and discussing findings, all contributing to valuable insights into climate trends for informed decision-making in resource management and climate risk mitigation within the region. But I can't display the project results because the data is confidential.
               </p>
             </div>
           </div>
