--- a/portfolio-details6.html
+++ b/portfolio-details6.html
@@ -51,7 +51,11 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-1.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-4.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/portfolio-4-deep.png" alt="">
                 </div>
 
               </div>
@@ -63,18 +67,17 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Application Mobile</li>
-                <li><strong>Client</strong>: Bangkit Academy</li>
-                <li><strong>Project date</strong>: 16 Juni, 2023</li>
-                <li><strong>Landing Page</strong>: <a href="https://barkit-landing-page-iba3thqjqq-et.a.run.app/">BarKit</a></li>
-                <li><strong>Project URL</strong>: <a href="https://github.com/BangkitCapstone2023" target="_blank">Bangkit Capstone</a></li>
+                <li><strong>Category</strong>: Guidebook</li>
+                <li><strong>Client</strong>: BBMKG Wilayah IV Makassar</li>
+                <li><strong>Project date</strong>: 16 July 2022</li>
+                <li><strong>Landing Page</strong>: <a href="https://www.academia.edu/105135953/Buku_panduan_dengan_judul_Estimasi_Missing_Values_Data_Curah_Hujan_Pada_Kabupaten_Pinrang_Menggunakan_Metode_Interpolasi_di_BBMKG_Wilayah_IV_Makassar" target="_blank">"Guidebook a Data Climate Analysis"</a></li>
 
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>About The Project</h2>
               <p>
-                Our team was inspired by the issue of limited stock or options available to most people who only require them for a short period or specific events. As a solution, we developed an e-commerce-based rental application called "BarKit (Barang Kita)" that shares similarities with traditional e-commerce platforms but includes options for returning items according to agreed-upon timeframes. Our application utilizes Machine Learning to validate uploaded item listings with inputted categories, thereby avoiding clickbait often encountered on other e-commerce platforms.
+                This project aims to create a comprehensive handbook on interpolation techniques for dealing with missing rainfall data. Rainfall is an important parameter in climate and hydrological analysis, but often the data is incomplete or missing for various reasons. In this guide, various interpolation methods that can be used to fill in missing values ​​in rainfall data will be explained in detail, so that the analysis is more accurate and reliable.
               </p>
             </div>
           </div>
