--- a/portfolio-details7.html
+++ b/portfolio-details7.html
@@ -51,7 +51,19 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-9.png" alt="">
+                  <img src="assets/img/portfolio/portfolio-5.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/portfolio-5-deep.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/portfolio-5-deep1.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/portfolio-5-deep2.png" alt="">
                 </div>
 
               </div>
@@ -63,18 +75,17 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Application Mobile</li>
-                <li><strong>Client</strong>: Bangkit Academy</li>
-                <li><strong>Project date</strong>: 16 Juni, 2023</li>
-                <li><strong>Landing Page</strong>: <a href="https://barkit-landing-page-iba3thqjqq-et.a.run.app/">BarKit</a></li>
-                <li><strong>Project URL</strong>: <a href="https://github.com/BangkitCapstone2023" target="_blank">Bangkit Capstone</a></li>
+                <li><strong>Category</strong>: Research Journal</li>
+                <li><strong>Client</strong>: BBMKG Wilayah IV Makassar</li>
+                <li><strong>Project date</strong>: 16 August 2022</li>
+                <li><strong>Project Link</strong>: <a href="https://www.academia.edu/105210841/Perbandingan_Teknik_Interpolasi_Terhadap_Estimasi_Missing_Data_Curah_Hujan_di_Kota_Makassar" target="_blank">"Perbandingan Teknik Interpolasi Terhadap Estimasi Missing Data Curah Hujan di Kota Makassar"</a></li>
 
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>About The Project</h2>
               <p>
-                Our team was inspired by the issue of limited stock or options available to most people who only require them for a short period or specific events. As a solution, we developed an e-commerce-based rental application called "BarKit (Barang Kita)" that shares similarities with traditional e-commerce platforms but includes options for returning items according to agreed-upon timeframes. Our application utilizes Machine Learning to validate uploaded item listings with inputted categories, thereby avoiding clickbait often encountered on other e-commerce platforms.
+                Rainfall data is one of the biggest factors that affect the climate of a region. Frequently missing rainfall data found in rainfall data makes analysis and decision-making difficult, so it is important to find an accurate and efficient estimation method to fill in the data so that statistical inference can be carried out. The estimation is carried out using several interpolation methods in the RStudio program, namely the na.StructTS function, and the na.approx function in the "zoo" package as well as the na_ma function, na_locf function and na.interpolation function in the "imputeTS" package. The data processed is monthly rainfall data in 2009-2020 in the city of Makassar. Some values of the data were randomly considered as missing data which were divided into four categories, namely (6.9%), (10.4%), (13.9%), and (20%). The results showed that the na.StructTS method was the best method in finding missing data with the largest correlation coefficient of 0.85 and the smallest RMSE value of 159.967 in the 20% category. Keywords: rainfall, interpolation, missing values.
               </p>
             </div>
           </div>
