--- a/portfolio-details5.html
+++ b/portfolio-details5.html
@@ -63,10 +63,9 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Application Mobile</li>
-                <li><strong>Client</strong>: Bangkit Academy</li>
-                <li><strong>Project date</strong>: 16 Juni, 2023</li>
-                <li><strong>Landing Page</strong>: <a href="https://barkit-landing-page-iba3thqjqq-et.a.run.app/">BarKit</a></li>
+                <li><strong>Project Name</strong>: Penggunaan Model Pembelajaran Kooperatif Tipe Jigsaw Berbantuan Media Socrative Dapat Meningkatkan Hasil Belajar</li>
+                <li><strong>Client</strong>: Baiq Nelly</li>
+                <li><strong>Project date</strong>: 19 May 2023</li>
                 <li><strong>Project URL</strong>: <a href="https://github.com/BangkitCapstone2023" target="_blank">Bangkit Capstone</a></li>
 
               </ul>
