--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Welcome to my portfolio! I am someone who is passionate about the world of technology and data analysis. With experience in developing innovative applications, meticulously analyzing data, and fulfilling the role of a Data Scientist, I am prepared to bring valuable insights and contributions. Let's explore together how my journey has shaped a profound understanding of the world of technology and data analysis.</p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
@@ -215,6 +215,20 @@
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-5.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Data Scientist 3"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details7.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-analyst">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio11.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Data Analyst 5</h4>
+                <p>Data Analyst</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio11.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Data Analyst 5"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details8.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
