--- a/services.html
+++ b/services.html
@@ -78,7 +78,7 @@
 
         <div class="section-title">
           <h2>Certificates</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>I proudly present to you a collection of certificates that I have created to commemorate various achievements and accomplishments. Certificates are evidence of appreciation and recognition for hard work, dedication, and outstanding achievements.</p>
         </div>
 
         <div class="row">
