--- a/resume.html
+++ b/resume.html
@@ -136,6 +136,28 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Work Experience</h3>
             <div class="resume-item">
+              <h4>Machine Learning Engineer</h4>
+              <h5>Sept 2023 -  Now</h5>
+              <p><em>PT. PERIKSA GIGI INDONESIA (GoDentist)</em></p>
+              <p>
+              <ul>
+                <li>Develop Machine Learning models that improve operational efficiency.</li>
+              </ul>
+              </p>
+            </div>
+            <div class="resume-item">
+              <h4>Data Analytics</h4>
+              <h5>Jan 2022 - Now</h5>
+              <p><em>Dapoer Data, Makassar, IND</em></p>
+              <p>
+              <ul>
+                <li>Conducting data analysis on customer research: Analyzing the data provided from customer research projects and interpreting the findings</li>
+                <li>Designing promotional materials for Dapoer Data: Creating visual designs and graphics for promotional purposes to enhance the company's marketing efforts.</li>
+                <li>Social media administration: Managing and maintaining social media accounts for Dapoer Data, including creating and scheduling posts, engaging with the audience, and monitoring social media performance.</li>
+              </ul>
+              </p>
+            </div>
+            <div class="resume-item">
               <h4>Brand Ambasshador</h4>
               <h5>Apr - Des 2022</h5>
               <p><em>Peduli Digital, East Java, IND</em></p>
@@ -159,18 +181,6 @@
                 <li>Conducting research and writing a journal titled "Comparison of Interpolation Techniques for Estimating Missing Rainfall Data in Makassar City."</li>
                 <li>Conducting research and writing a journal titled "Comparison of ARIMA and Backpropagation Accuracy in Predicting."</li>
                 <li>Participating in a competition held for BMKG's anniversary celebration and creating a poster design to commemorate BMKG's anniversary and Indonesia's Independence Day on August 17.</li>
-              </ul>
-              </p>
-            </div>
-            <div class="resume-item">
-              <h4>Data Analytics</h4>
-              <h5>Jun - Sept 2022</h5>
-              <p><em>Dapoer Data, Makassar, IND</em></p>
-              <p>
-              <ul>
-                <li>Conducting data analysis on customer research: Analyzing the data provided from customer research projects and interpreting the findings</li>
-                <li>Designing promotional materials for Dapoer Data: Creating visual designs and graphics for promotional purposes to enhance the company's marketing efforts.</li>
-                <li>Social media administration: Managing and maintaining social media accounts for Dapoer Data, including creating and scheduling posts, engaging with the audience, and monitoring social media performance.</li>
               </ul>
               </p>
             </div>
