--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-rounded-right"></i> <strong>Birthday:</strong> 04 September 2003</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Blog:</strong> https://datamathinkale.blogspot.com</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>Blog: </strong> <a href="https://datamathinkale.blogspot.com">datamathinkale</a></li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Phone:</strong> +62 852-5623-6147</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>City:</strong> Makassar, Indonesia</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Freelance:</strong> Available</li>
@@ -102,10 +102,10 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Age:</strong> 19</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>Age:</strong> 20</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Degree:</strong> Bachelor of Science (S1) in Mathematics Science</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Status:</strong> In Progress or Ongoing</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong> andiillarvianinensi@gmail.com</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong> <a href="andiillarvianinensi@gmail.com">andiillarvianinensi@gmail.com</a></li>
                 </ul>
               </div>
             </div style="text-align: justify;">
