--- a/resume.html
+++ b/resume.html
@@ -91,7 +91,7 @@
               <ul>
                 <li>Makassar City, Indonesia</li>
                 <li>(62) 852-5623-6147</li>
-                <li>alice.barkley@example.com</li>
+                <li>andiillarvianinensi@gmail.com</li>
               </ul>
               </p>
             </div>
