--- a/services.html
+++ b/services.html
@@ -163,6 +163,9 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <img src="./assets/img/certificate/certificate_21.jpeg" class="img-fluid" alt="..." />
           </div>
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+            <img src="./assets/img/certificate/certificate_22.jpg" class="img-fluid" alt="..." />
+          </div>
         </div>
 
       </div>
