--- a/about.html
+++ b/about.html
@@ -102,9 +102,9 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Age:</strong> 20</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>Age:</strong> 21</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Degree:</strong> Bachelor of Science (S1) in Mathematics Science</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Status:</strong> In Progress or Ongoing</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>Status:</strong> Magister of Statistic and Data Science (S2) IPB University</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong> <a href="andiillarvianinensi@gmail.com">andiillarvianinensi@gmail.com</a></li>
                 </ul>
               </div>
